--- a/src/index.css
+++ b/src/index.css
@@ -25,7 +25,7 @@ html body {
   position: relative;
 }
 html body code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New", monospace;
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New", 'Fira Code', monospace;
 }
 html body {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
@@ -34,5 +34,5 @@ html body {
   position: relative;
 }
 html body code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New", monospace;
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New", 'Fira Code', monospace;
 } */
